# learn_fastapi

./: alembic.ini  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_02_1618-0d843912e602_create_table.py  2024_12_02_1922-bce14b50f38f_create_table_user.py  2024_12_02_1941-82a03726d669_create_posts_lable.py  2024_12_03_1302-37d353358d93_new.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependency.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py  users.py
users/: crud.py  schemas.py  views.py
