[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Sarah_Kerrigan <seregastrvs1@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.5"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
pydantic = {extras = ["email"], version = "^2.10.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"


[tool.poetry.group.def.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
